Use kotlig konfig to store sensitive variables